Add styled-components dependency and update project components

--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manish Kumar - Portfolio</title>
-    <link rel="shortcut icon" href="src/assets/mtr_logo.png" type="image/x-icon">
+    <!-- Favicon -->
+    <link rel="icon" href="/src/assets/mtr logo.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="/src/assets/mtr logo.png" type="image/png" sizes="16x16">
+    <link rel="apple-touch-icon" href="/src/assets/mtr logo.png">
+    <link rel="shortcut icon" href="/src/assets/mtr logo.png" type="image/x-icon">
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZX66TH1LCN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZX66TH1LCN');
+</script>
+
   </head>
   <body class="bg-white text-gray-900 dark:bg-gray-950 dark:text-gray-100">
     <div id="root"></div>
